write swagger-docs
